# stereo_matching

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  collect_image.cpp  start_stereo_match.cpp
include/: chessboard_images.h  stereo_calib_and_rect.h  stereo_vision.h
src/: CMakeLists.txt  chessboard_images.cpp  stereo_calib_and_rect.cpp  stereo_vision.cpp
